# ROVI

./: README.md
Final_project/: .gitignore  CMakeLists.txt  Dockerfile  README.md
Final_project/ROB/: CMakeLists.txt
Final_project/ROB/RoViPlugin/: CMakeLists.txt
Final_project/ROB/RoViPlugin/include/: Visualservoing.hpp
Final_project/ROB/RoViPlugin/src/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.hpp  Visualservoing.cpp
Final_project/ROB/src/: CMakeLists.txt
Final_project/RoViPlugin/src/: SamplePlugin.cpp  Vision.hpp
Final_project/SamplePlugin/: CMakeLists.txt
Final_project/SamplePlugin/src/: SamplePlugin.cpp  vision.hpp
Final_project/SamplePluginPA10/markers/: Marker2c.ppm
Final_project/SamplePluginPA10/src/: SamplePlugin.cpp
Final_project/VIS/: CMakeLists.txt
Final_project/VIS/include/: LineFinding.hpp  Vision.hpp  helper_funcs.hpp
Final_project/VIS/src/: CMakeLists.txt  LineFinding.cpp  Vision.cpp  helper_funcs.cpp  main.cpp  main_mark1.cpp  main_mark2.cpp
Final_project/rob_tests/: .fuse_hidden0000c8b9000000ea  fast_single_point.ods  fast_triple_points.ods  medium_single_point.ods  medium_triple_points.ods  slow_single_point.ods  slow_triple_points.ods  tracking_errors_simulated.ods  vision_tracking_triple_point_dt0.155.ods  vision_tracking_triple_point_dt0.16.ods  vision_tracking_triple_point_dt0.17.ods
Final_project/src/: LineFinding.cpp  main.cpp  vision.hpp
ROB_1/: .clang_complete  CMakeLists.txt
ROB_1/matlab/: Statistics.m  data.csv  output_file2.csv  output_file4.csv
ROB_1/src/: LuaGenerator.cpp  LuaGenerator.hpp  Utilities.cpp  findPathWithEpsilon.cpp  findPathWithEpsilon.hpp  pathplanning.cpp
VIS_1/: CMakeLists.txt
VIS_1/src/: CMakeLists.txt  DftUtilities.cpp  DftUtilities.hpp  SpatialDomain.cpp  SpatialDomain.hpp  fix_all.cpp  fix_image1.cpp  fix_image2.cpp  fix_image3.cpp  fix_image4.cpp  main.cpp
