CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set (ROVI_PLUGIN_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set (ROVI_PLUGIN_HEADERDIR "${ROVI_PLUGIN_DIR}/include")
set (ROVI_PLUGIN_HEADERS ${ROVI_PLUGIN_HEADERDIR}/SamplePlugin.hpp)
set (ROVI_PLUGIN_HEADERS ${ROVI_PLUGIN_HEADERS} ${ROVI_PLUGIN_HEADERDIR}/Vision.hpp)
set (ROVI_PLUGIN_HEADERS ${ROVI_PLUGIN_HEADERS} ${ROVI_PLUGIN_HEADERDIR}/Visualservoing.hpp)
include_directories(${ROVI_PLUGIN_HEADERDIR})
add_subdirectory("src")
